--- a/noop-transaction-processor/pom.xml
+++ b/noop-transaction-processor/pom.xml
@@ -31,7 +31,7 @@
   </dependency>
   <dependency>
    <groupId>org.slf4j</groupId>
-   <artifactId>slf4j-log4j12</artifactId>
+   <artifactId>slf4j-jdk14</artifactId>
   </dependency>
 
   <!-- Unit testing -->
