--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <protobuf.version>3.8.0</protobuf.version>
-    <sawtooth.sdk.version>v0.1.2-SNAPSHOT</sawtooth.sdk.version>
+    <sawtooth.sdk.version>v0.1.3</sawtooth.sdk.version>
     <daml.sdk.version>100.13.16</daml.sdk.version>
     <daml.bindings.version>2.3.3</daml.bindings.version>
     <scala.lang.version>2.12</scala.lang.version>
