--- a/docker/compose/daml-local.yaml
+++ b/docker/compose/daml-local.yaml
@@ -35,8 +35,8 @@ services:
   tracer-ui:
     image: tracer-ui:${ISOLATION_ID}
     container_name: tracer-ui
-    ports:
-      - 8080:8080
+    expose:
+      - 8080
     entrypoint: bash -c 'yarn run develop'
     environment:
       - NODE_ENV=development
