--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <!--
  * Copyright 2019 Blockchain Technology Partners
  *
@@ -14,9 +14,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  -->
- <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>daml-on-sawtooth</groupId>
   <artifactId>daml-on-sawtooth</artifactId>
@@ -92,7 +90,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <protobuf.version>3.8.0</protobuf.version>
     <sawtooth.sdk.version>v0.1.3</sawtooth.sdk.version>
-    <daml.sdk.version>100.13.16</daml.sdk.version>
+    <daml.sdk.version>100.13.18</daml.sdk.version>
     <daml.bindings.version>2.3.3</daml.bindings.version>
     <scala.lang.version>2.12</scala.lang.version>
   </properties>
@@ -267,7 +265,7 @@
           <version>3.12.0</version>
           <configuration>
             <rulesets>
-<!--               <ruleset>/rulesets/java/maven-pmd-plugin-default.xml</ruleset>
+              <!--               <ruleset>/rulesets/java/maven-pmd-plugin-default.xml</ruleset>
               <ruleset>/category/java/bestpractices.xml</ruleset> -->
               <ruleset>/category/java/security.xml</ruleset>
             </rulesets>
