--- a/tracer-ui/package.json
+++ b/tracer-ui/package.json
@@ -62,7 +62,9 @@
     "webpack-cli": "3.2.3",
     "webpack-dev-server": "3.2.1",
     "webpack-merge": "4.2.2",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "webpack-visualizer-plugin": "^0.1.11",
+    "serialize-javascript": "2.1.2",
+    "mixin-deep": "1.3.2"
   },
   "resolutions": {
     "set-value": "2.0.1",
