--- a/sawtooth-daml-rpc/pom.xml
+++ b/sawtooth-daml-rpc/pom.xml
@@ -116,6 +116,27 @@
       <artifactId>sandbox_${scala.lang.version}</artifactId>
     </dependency>
 
+    <!-- Apache Commons -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.9</version>
+    </dependency>
+
+  <!--JSON -->
+  <dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20190722</version>
+  </dependency>
+
+    <!-- JWT dependencies -->
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>3.8.3</version>
+    </dependency>
+
     <!-- Hyperledger Sawtooth -->
 
     <!-- Apache Commons -->
